corrects navbar logo width, navlink font size token, and spacing tokens on accountpopoverbutton width and height

--- a/src/components/hibana/DesktopNavigation.module.scss
+++ b/src/components/hibana/DesktopNavigation.module.scss
@@ -1,7 +1,7 @@
 @import '~@sparkpost/design-tokens-hibana/tokens';
 @import 'src/styles/resets';
 
-$logo-width: 150px;
+$logo-width: 134px;
 
 .DesktopNavigation {
   background-color: color(white);
@@ -68,7 +68,7 @@ $logo-width: 150px;
 // Some specificity issues with visited links
 .NavLink.NavLink {
   display: inline-flex;
-  font-size: font-size(300);
+  font-size: font-size(200);
   padding: spacing(200) spacing(400);
   border-radius: border-radius(pill);
   outline-offset: -3px; // helps ensure focus outline is visible
